--- a/app/.htaccess
+++ b/app/.htaccess
@@ -24,3 +24,17 @@ ExpiresDefault "access plus 1 week"
     Header append Vary: Accept-Encoding
   </FilesMatch>
 </IfModule>
+
+
+# Audio
+AddType audio/aac .aac
+AddType audio/mp4 .mp4 .m4a
+AddType audio/mpeg .mp1 .mp2 .mp3 .mpg .mpeg
+AddType audio/ogg .oga .ogg
+AddType audio/wav .wav
+AddType audio/webm .webm
+
+# Video
+AddType video/ogg ogv
+AddType video/mp4 mp4 m4v
+AddType video/webm webm
