--- a/app/.htaccess
+++ b/app/.htaccess
@@ -35,6 +35,6 @@ AddType audio/wav .wav
 AddType audio/webm .webm
 
 # Video
-AddType video/ogg ogv
-AddType video/mp4 mp4 m4v
-AddType video/webm webm
+AddType video/ogg .ogv
+AddType video/mp4 .mp4 .m4v
+AddType video/webm .webm
